k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nairatransfer-pro
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8000
  selector:
    app: nairatransfer-pro
